Fixing montage video - hide on screen less then 600px. Fixing robot arm - show on mobile screen.
Former-commit-id: 4707cc59fd88e760cef733763cf4b60462d7a160

--- a/_sass/_button.scss
+++ b/_sass/_button.scss
@@ -52,4 +52,15 @@
       color: #fff;
     }
   }
+  &.modal-btn{
+    @media screen and (max-width: 601px){
+      display: none;
+    }
+  }
+  &.modal-link{
+    display: none;
+    @media screen and (max-width: 601px){
+      display: inline-block;
+    }
+  }
 }
