--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -53,7 +53,12 @@
       width: 700px;
       max-width: none;
       @media screen and (max-width: 992px){
-        display: none;
+        position: absolute;
+        width: 500px;
+        z-index: -1;
+      }
+      @media screen and (max-width: 520px){
+        left: 5px;
       }
     }
     &-content {
@@ -67,6 +72,7 @@
       box-shadow: 0 0 30px 0 rgba(0,0,0,0.2);
       @media screen and (max-width: 992px){
         position: static;
+        margin-top: 238px;
       }
       @media screen and (max-width: 520px){
         padding: 15px 60px;
@@ -113,7 +119,7 @@
     background-color: #333439;
   }
 
-  .current-version{
+  .time-line-wrappper{
     @media screen and (max-width: 992px){
       display: none;
     }
@@ -122,6 +128,9 @@
   h2 {
     padding-top: 150px;
     color: $white;
+    @media screen and (max-width: 992px){
+      padding-top: 50px;
+    }
   }
 
   h3 {
