--- a/_sass/_modal.scss
+++ b/_sass/_modal.scss
@@ -5,9 +5,14 @@
   -moz-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   -o-transform: translateY(-50%);
+  min-height: 450px;
 
   &-content{
     width: 600px;
+  }
+
+  &-dialog{
+    max-width: 600px;
   }
 
   &-header{
